Fix grounding logic to prevent falling below minimum height in game

--- a/index.html
+++ b/index.html
@@ -1841,7 +1841,7 @@
 
             // Keep grounded if requested
             if (this.data.stayGrounded) {
-              if (pos.y < 1.6) pos.y = 1.6;
+              if (pos.y < 0.1) pos.y = 0.1; //1.6
             }
 
             // Run simple collider correction if the scene has collider-check
