--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     <div class="hint">
       WASD / arrow keys to move, mouse to look. In VR, use thumbsticks to move
-      and controllers to point. Explore the forest!
+      and controllers to point. Explore the forest! CameraRiog
     </div>
 
     <a-scene
@@ -416,7 +416,7 @@
       <!-- Camera rig with WASD and VR controls -->
       <a-entity
         id="cameraRig"
-        position="0 1.6 0"
+        position="0 0 0"
         movement-controls="enabled: true; speed: 0.1;"
         vr-locomotion="controllerHand: left"
       >
@@ -425,7 +425,7 @@
           id="head"
           camera
           look-controls="pointerLockEnabled: false"
-          position="0 0 0"
+          position="0 1.6 0"
           wasd-controls="enabled: false"
         >
         </a-entity>
