--- a/index.html
+++ b/index.html
@@ -229,6 +229,11 @@
         <img id="taguaUncheck" src="assets/ui/tagua-uncheck.png" />
         <img id="tatuCheck" src="assets/ui/tatu-check.png" />
         <img id="tatuUncheck" src="assets/ui/tatu-uncheck.png" />
+
+        <!-- Cartel images -->
+        <img id="cartelSafari" src="assets/img/cartel-safari.png" />
+        <img id="cartelVuelo" src="assets/img/cartel-vuelo.png" />
+        <img id="cartelMain" src="assets/img/cartel-main.png" />
       </a-assets>
 
       <!-- Sky -->
@@ -252,18 +257,18 @@
         width="500"
         depth="500"
         density="20"
-        opacity="0.9"
+        opacity="1"
         position="30 -0.5 -10"
       ></a-ocean>
 
-      <!-- Ground (slightly raised) -->
+      <!-- Ground (slightly raised) 
       <a-entity
         geometry="primitive: circle; radius: 50; segments: 32"
         material="color: #96d165"
         shadow="receive: true"
         rotation="-90 0 0"
         position="0 0.01 0"
-      ></a-entity>
+      ></a-entity> -->
 
       <!-- Player Collision Boundary Ring -->
       <a-entity
@@ -276,54 +281,69 @@
       ></a-entity>
 
       <!-- Safari Game Control Orbs -->
-      <a-entity id="gameOrbs" position="0 1.5 -2.5">
-        <!-- White Start Game Orb -->
-        <a-sphere
-          id="startOrb"
+      <a-entity id="carteles" position="0 1.5 -5">
+        <!-- Safari Cartel -->
+        <a-entity
+          id="startCartel"
+          shadow="receive: false"
           class="clickable orb-start"
-          radius="0.2"
-          position="-0.3 0 0"
-          material="color: #FFFFFF; emissive: #FFFFFF; emissiveIntensity: 0.5; shader: flat"
-          shadow="cast: true"
-          animation="property: position; to: -0.3 0.1 0; dur: 2000; easing: easeInOutSine; loop: true; dir: alternate"
-          animation__pulse="property: material.emissiveIntensity; from: 0.5; to: 1.0; dur: 1500; easing: easeInOutSine; loop: true; dir: alternate"
-          orb-controller
+          position="-4.5 0 0"
         >
-          <a-text
-            value="START\nSAFARI"
-            align="center"
-            position="0 0.35 0"
-            scale="0.3 0.3 0.3"
-            color="#FFFFFF"
-            shader="msdf"
-            outline-width="12%"
-            outline-color="#000000"
-          ></a-text>
-        </a-sphere>
+          <a-image
+            id="startCartelImg"
+            src="#cartelSafari"
+            position="0 0 0"
+            width="1"
+            height="1.4"
+            shadow="cast: true"
+            orb-controller
+          ></a-image>
+          <a-box
+            position="0 -1 -0.15"
+            scale="0.2 3 0.2"
+            color="#a85432"
+          ></a-box>
+        </a-entity>
 
-        <!-- Pink Future Minigame Orb -->
-        <a-sphere
-          id="minigameOrb"
+        <!-- Flight Cartel -->
+        <a-entity
+          id="vueloCartel"
+          shadow="receive: false"
           class="clickable orb-minigame"
-          radius="0.2"
-          position="0.3 0 0"
-          material="color: #FF69B4; emissive: #FF69B4; emissiveIntensity: 0.3; shader: flat; opacity: 0.6"
-          shadow="cast: true"
-          animation="property: position; to: 0.3 0.1 0; dur: 2200; easing: easeInOutSine; loop: true; dir: alternate"
-          animation__pulse="property: material.emissiveIntensity; from: 0.3; to: 0.7; dur: 1700; easing: easeInOutSine; loop: true; dir: alternate"
+          position="4.5 0 0"
         >
-          <a-text
-            value="COMING\nSOON"
-            align="center"
-            position="0 0.35 0"
-            scale="0.25 0.25 0.25"
-            color="#FFB6C1"
-            shader="msdf"
-            outline-width="12%"
-            outline-color="#000000"
-          ></a-text>
-        </a-sphere>
+          <a-image
+            id="minigameOrb"
+            class="clickable orb-minigame"
+            src="#cartelVuelo"
+            position="0 0 0"
+            width="1"
+            height="1.4"
+            shadow="cast: true"
+          ></a-image>
+          <a-box
+            position="0 -1 -0.15"
+            scale="0.2 3 0.2"
+            color="#a85432"
+          ></a-box>
+        </a-entity>
       </a-entity>
+
+      <!-- Main Cartel -->
+
+      <a-entity id="mainCartelGrande" position="0 3 -5">
+        <a-image
+          id="mainCartel"
+          geometry="width: 7"
+          src="#cartelMain"
+          position="0 0 0"
+          width="7"
+          height="4"
+          shadow="cast: true"
+        ></a-image>
+        <a-box position="2 -2 -0.15" scale="0.2 3 0.2" color="#a85432"></a-box
+        ><a-box position="-2 -2 -0.15" scale="0.2 3 0.2" color="#a85432"></a-box
+      ></a-entity>
 
       <!-- Scenario Model -->
       <a-entity
@@ -341,7 +361,7 @@
         class="clickable animal"
         data-animal-type="flamingo"
         gltf-model="#flamengoModel"
-        position="-2 0 -5"
+        position="-2 0 -11.7855"
         rotation="0 195.6 0"
         scale="2 2 2"
         animation-mixer="clip: idle"
@@ -355,7 +375,7 @@
         class="clickable animal"
         data-animal-type="jaguarete"
         gltf-model="#jaguareteModel"
-        position="0 0 -6.42427"
+        position="0 0 -12.61965"
         rotation="0 180 0"
         scale="2 2 2"
         animation-mixer
@@ -369,7 +389,7 @@
         class="clickable animal"
         data-animal-type="nandu"
         gltf-model="#nanduModel"
-        position="2 0 -6.07093"
+        position="2 0 -13.07353"
         rotation="0 180 0"
         scale="2 2 2"
         animation-mixer
@@ -383,7 +403,7 @@
         class="clickable animal"
         data-animal-type="jurumi"
         gltf-model="#jurumiModel"
-        position="-4 0 -5"
+        position="-4 0 -10.61748"
         rotation="0 208.28 0"
         scale="2 2 2"
         animation-mixer
@@ -397,7 +417,7 @@
         class="clickable animal"
         data-animal-type="tagua"
         gltf-model="#taguaModel"
-        position="4 0 -5"
+        position="4 0 -11.84846"
         rotation="0 160.4 0"
         scale="2 2 2"
         animation-mixer
@@ -411,7 +431,7 @@
         class="clickable animal"
         data-animal-type="tatu"
         gltf-model="#tatuModel"
-        position="6 0 -5"
+        position="6 0 -10.75553"
         rotation="0 149.7 0"
         scale="2 2 2"
         animation-mixer
@@ -499,12 +519,12 @@
         ></a-entity>
         <a-entity
           id="tree8"
-          position="-11.73389 0 -29.4935"
+          position="-36.90708 0 -29.4935"
           composite-tree="scale: 5.7"
         ></a-entity>
         <a-entity
           id="tree9"
-          position="10.26309 0 37.01623"
+          position="7.10426 0 26.28008"
           composite-tree="scale: 4.7"
         ></a-entity>
         <a-entity
@@ -554,7 +574,7 @@
         ></a-entity>
         <a-entity
           id="tree19"
-          position="20.10589 0 -9.15669"
+          position="-7.59536 0 -55.88287"
           composite-tree="scale: 4.7"
         ></a-entity>
         <a-entity
@@ -591,7 +611,7 @@
         ></a-entity>
         <a-entity
           id="deadTree6"
-          position="8.07297 0 11.05505"
+          position="9.87869 0 -36.65912"
           composite-tree="scale: 5.2; type: dead"
         ></a-entity>
         <a-entity
@@ -668,7 +688,7 @@
         ></a-entity>
         <a-entity
           id="shrub11"
-          position="-22 0 -38"
+          position="-43.85365 0 -13.84437"
           composite-tree="scale: 1.9; type: shrub"
         ></a-entity>
         <a-entity
@@ -683,7 +703,7 @@
         ></a-entity>
         <a-entity
           id="shrub14"
-          position="12 0 -42"
+          position="7.24828 0 -38.99645"
           composite-tree="scale: 2.1; type: shrub"
         ></a-entity>
         <a-entity
@@ -703,7 +723,7 @@
         ></a-entity>
         <a-entity
           id="shrub18"
-          position="22 0 -35"
+          position="-6.50389 0 -28.32773"
           composite-tree="scale: 2.3; type: shrub"
         ></a-entity>
         <a-entity
