--- a/index.html
+++ b/index.html
@@ -248,9 +248,8 @@
         id="sun"
         light="type: directional; color: #ffffff; intensity: 1.3; castShadow: true"
         position="0 50 0"
-        rotation="0 0 0"
+        rotation="-45 45 0"
       ></a-entity>
-      <!-- rotation="-45 45 0" -->
 
       <!-- Ocean using a-ocean component -->
       <a-ocean
@@ -303,6 +302,11 @@
             scale="0.2 3 0.2"
             color="#a85432"
           ></a-box>
+          <a-box
+            position="0 0 -0.03"
+            scale="0.9 1.3 0.05"
+            color="#a85432"
+          ></a-box>
         </a-entity>
 
         <!-- Flight Cartel -->
@@ -326,6 +330,11 @@
             scale="0.2 3 0.2"
             color="#a85432"
           ></a-box>
+          <a-box
+            position="0 0 -0.03"
+            scale="0.9 1.3 0.05"
+            color="#a85432"
+          ></a-box>
         </a-entity>
       </a-entity>
 
@@ -341,6 +350,11 @@
           height="4"
           shadow="cast: true"
         ></a-image>
+        <a-box
+          position="0 0 -0.03"
+          scale="6.5 3.5 0.05"
+          color="#a85432"
+        ></a-box>
         <a-box position="2 -2 -0.15" scale="0.2 3 0.2" color="#a85432"></a-box
         ><a-box position="-2 -2 -0.15" scale="0.2 3 0.2" color="#a85432"></a-box
       ></a-entity>
@@ -361,7 +375,7 @@
         class="clickable animal"
         data-animal-type="flamingo"
         gltf-model="#flamengoModel"
-        position="-2 0 -11.7855"
+        position="-5.14962 0 -31.29516"
         rotation="0 195.6 0"
         scale="2 2 2"
         animation-mixer="clip: idle"
@@ -375,8 +389,8 @@
         class="clickable animal"
         data-animal-type="jaguarete"
         gltf-model="#jaguareteModel"
-        position="0 0 -12.61965"
-        rotation="0 180 0"
+        position="-8.52793 0 16.69473"
+        rotation="0 -45 0"
         scale="2 2 2"
         animation-mixer
         staggered-start="maxOffset: 1.6"
@@ -389,8 +403,8 @@
         class="clickable animal"
         data-animal-type="nandu"
         gltf-model="#nanduModel"
-        position="2 0 -13.07353"
-        rotation="0 180 0"
+        position="22.16629 0 -1.51447"
+        rotation="0 163 0"
         scale="2 2 2"
         animation-mixer
         staggered-start="maxOffset: 1.6"
@@ -403,7 +417,7 @@
         class="clickable animal"
         data-animal-type="jurumi"
         gltf-model="#jurumiModel"
-        position="-4 0 -10.61748"
+        position="-20.43949 0 -2.0148"
         rotation="0 208.28 0"
         scale="2 2 2"
         animation-mixer
@@ -417,7 +431,7 @@
         class="clickable animal"
         data-animal-type="tagua"
         gltf-model="#taguaModel"
-        position="4 0 -11.84846"
+        position="10.42833 0 16.71228"
         rotation="0 160.4 0"
         scale="2 2 2"
         animation-mixer
@@ -431,7 +445,7 @@
         class="clickable animal"
         data-animal-type="tatu"
         gltf-model="#tatuModel"
-        position="6 0 -10.75553"
+        position="9.99464 0 3.83831"
         rotation="0 149.7 0"
         scale="2 2 2"
         animation-mixer
@@ -484,28 +498,23 @@
         <!-- Outer circle of larger trees -->
         <a-entity
           id="tree1"
-          position="15.14641 0 -28.37261"
+          position="-9.81203 0 7.42154"
           composite-tree="scale: 4.2"
         ></a-entity>
         <a-entity
           id="tree2"
-          position="-18.52326 0 -20.69546"
+          position="39.9652 0 41.44017"
           composite-tree="scale: 5.5"
         ></a-entity>
         <a-entity
           id="tree3"
-          position="11.84179 0 20.00548"
+          position="-7.63928 0 -25.8336"
           composite-tree="scale: 4.8"
         ></a-entity>
         <a-entity
           id="tree4"
-          position="21.67241 0 -7.20963"
+          position="-14.9462 0 -37.99655"
           composite-tree="scale: 6.0"
-        ></a-entity>
-        <a-entity
-          id="tree5"
-          position="-19.33443 0 -6.1623"
-          composite-tree="scale: 5.2"
         ></a-entity>
         <a-entity
           id="tree6"
@@ -514,18 +523,8 @@
         ></a-entity>
         <a-entity
           id="tree7"
-          position="30.22765 0 -4.0909"
+          position="7.29328 0 56.39977"
           composite-tree="scale: 4.5"
-        ></a-entity>
-        <a-entity
-          id="tree8"
-          position="-36.90708 0 -29.4935"
-          composite-tree="scale: 5.7"
-        ></a-entity>
-        <a-entity
-          id="tree9"
-          position="7.10426 0 26.28008"
-          composite-tree="scale: 4.7"
         ></a-entity>
         <a-entity
           id="tree10"
@@ -539,17 +538,17 @@
         ></a-entity>
         <a-entity
           id="tree12"
-          position="-29.96653 0 -18.10853"
+          position="-38.28601 0 37.59927"
           composite-tree="scale: 5.5"
         ></a-entity>
         <a-entity
           id="tree13"
-          position="31.37212 0 3.39803"
+          position="8.53379 0 6.58757"
           composite-tree="scale: 4.8"
         ></a-entity>
         <a-entity
           id="tree14"
-          position="-17.5728 -55.76659 -66.91337"
+          position="-21.41027 0 -27.93459"
           composite-tree="scale: 6.0"
         ></a-entity>
         <a-entity
@@ -564,7 +563,7 @@
         ></a-entity>
         <a-entity
           id="tree17"
-          position="17.57425 0 -17.35746"
+          position="-52.21585 0 26.43496"
           composite-tree="scale: 4.5"
         ></a-entity>
         <a-entity
@@ -573,26 +572,16 @@
           composite-tree="scale: 5.7"
         ></a-entity>
         <a-entity
-          id="tree19"
-          position="-7.59536 0 -55.88287"
-          composite-tree="scale: 4.7"
-        ></a-entity>
-        <a-entity
           id="tree20"
-          position="9.25652 0 -17.34732"
+          position="-5.24718 0 -1.12259"
           composite-tree="scale: 5.3"
         ></a-entity>
 
         <!-- Random Dead Trees -->
         <a-entity
           id="deadTree1"
-          position="11.40051 0 -11.77417"
+          position="5.22567 0 15.07561"
           composite-tree="scale: 4.5; type: dead"
-        ></a-entity>
-        <a-entity
-          id="deadTree2"
-          position="-3.164 0 -16.17421"
-          composite-tree="scale: 5.0; type: dead"
         ></a-entity>
         <a-entity
           id="deadTree3"
@@ -606,12 +595,12 @@
         ></a-entity>
         <a-entity
           id="deadTree5"
-          position="2.71503 0 -38.6655"
+          position="-54.51291 0 19.31095"
           composite-tree="scale: 4.6; type: dead"
         ></a-entity>
         <a-entity
           id="deadTree6"
-          position="9.87869 0 -36.65912"
+          position="-54.6603 0 12.36879"
           composite-tree="scale: 5.2; type: dead"
         ></a-entity>
         <a-entity
@@ -621,29 +610,24 @@
         ></a-entity>
         <a-entity
           id="deadTree8"
-          position="28 0 -14.79774"
+          position="55.4278 0 12.76995"
           composite-tree="scale: 4.7; type: dead"
         ></a-entity>
         <a-entity
-          id="deadTree9"
-          position="9.69772 0 -21.87106"
-          composite-tree="scale: 5.1; type: dead"
-        ></a-entity>
-        <a-entity
           id="deadTree10"
-          position="42 0 -15"
+          position="-1.22391 0 28.36167"
           composite-tree="scale: 4.4; type: dead"
         ></a-entity>
 
         <!-- Random Shrubs -->
         <a-entity
           id="shrub1"
-          position="-8 0 -12"
+          position="-9.43601 0 15.56769"
           composite-tree="scale: 1.8; type: shrub"
         ></a-entity>
         <a-entity
           id="shrub2"
-          position="15 0 -8"
+          position="-25.78269 0 1.90714"
           composite-tree="scale: 2.0; type: shrub"
         ></a-entity>
         <a-entity
@@ -653,28 +637,13 @@
         ></a-entity>
         <a-entity
           id="shrub4"
-          position="25 0 -22"
+          position="-39.79956 0 30.00202"
           composite-tree="scale: 2.2; type: shrub"
         ></a-entity>
         <a-entity
-          id="shrub5"
-          position="-12 0 -28"
-          composite-tree="scale: 1.9; type: shrub"
-        ></a-entity>
-        <a-entity
           id="shrub6"
-          position="6.23042 0 4.94739"
+          position="2.87706 0 -6.83414"
           composite-tree="scale: 2.1; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub7"
-          position="-30 0 -5"
-          composite-tree="scale: 1.7; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub8"
-          position="8 0 -32"
-          composite-tree="scale: 2.3; type: shrub"
         ></a-entity>
         <a-entity
           id="shrub9"
@@ -683,17 +652,12 @@
         ></a-entity>
         <a-entity
           id="shrub10"
-          position="32 0 -12"
+          position="57.60538 0 -1.94542"
           composite-tree="scale: 2.0; type: shrub"
         ></a-entity>
         <a-entity
-          id="shrub11"
-          position="-43.85365 0 -13.84437"
-          composite-tree="scale: 1.9; type: shrub"
-        ></a-entity>
-        <a-entity
           id="shrub12"
-          position="28 0 25"
+          position="7.34944 0 1.0421"
           composite-tree="scale: 2.2; type: shrub"
         ></a-entity>
         <a-entity
@@ -702,18 +666,8 @@
           composite-tree="scale: 1.7; type: shrub"
         ></a-entity>
         <a-entity
-          id="shrub14"
-          position="7.24828 0 -38.99645"
-          composite-tree="scale: 2.1; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub15"
-          position="-18 0 -15"
-          composite-tree="scale: 1.8; type: shrub"
-        ></a-entity>
-        <a-entity
           id="shrub16"
-          position="35 0 -28"
+          position="21.41002 0 9.5312"
           composite-tree="scale: 2.0; type: shrub"
         ></a-entity>
         <a-entity
@@ -723,13 +677,8 @@
         ></a-entity>
         <a-entity
           id="shrub18"
-          position="-6.50389 0 -28.32773"
+          position="-44.44576 0 28.51439"
           composite-tree="scale: 2.3; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub19"
-          position="-38 0 -22"
-          composite-tree="scale: 1.7; type: shrub"
         ></a-entity>
         <a-entity
           id="shrub20"
@@ -746,11 +695,6 @@
           composite-tree="scale: 4.2"
         ></a-entity>
         <a-entity
-          id="tree2"
-          position="-22.17873 0 -25"
-          composite-tree="scale: 5.5"
-        ></a-entity>
-        <a-entity
           id="tree3"
           position="25 0 15"
           composite-tree="scale: 4.8"
@@ -759,11 +703,6 @@
           id="tree4"
           position="33.43294 0 4.56404"
           composite-tree="scale: 6.0"
-        ></a-entity>
-        <a-entity
-          id="tree5"
-          position="-32.6552 0 -12.70536"
-          composite-tree="scale: 5.2"
         ></a-entity>
         <a-entity
           id="tree6"
@@ -776,16 +715,6 @@
           composite-tree="scale: 4.5"
         ></a-entity>
         <a-entity
-          id="tree8"
-          position="-0.99125 0 -37.37708"
-          composite-tree="scale: 5.7"
-        ></a-entity>
-        <a-entity
-          id="tree9"
-          position="32 0 -32"
-          composite-tree="scale: 4.7"
-        ></a-entity>
-        <a-entity
           id="tree10"
           position="-10.28666 0 30"
           composite-tree="scale: 5.3"
@@ -794,11 +723,6 @@
           id="tree11"
           position="10.11644 0 42.66877"
           composite-tree="scale: 4.2"
-        ></a-entity>
-        <a-entity
-          id="tree12"
-          position="-35.29909 0 -25"
-          composite-tree="scale: 5.5"
         ></a-entity>
         <a-entity
           id="tree13"
@@ -831,27 +755,12 @@
           composite-tree="scale: 5.7"
         ></a-entity>
         <a-entity
-          id="tree19"
-          position="18.68266 0 -43.0372"
-          composite-tree="scale: 4.7"
-        ></a-entity>
-        <a-entity
           id="tree20"
           position="23.74279 0 40.22783"
           composite-tree="scale: 5.3"
         ></a-entity>
 
         <!-- Random Dead Trees -->
-        <a-entity
-          id="deadTree1"
-          position="-15 0 -35"
-          composite-tree="scale: 4.5; type: dead"
-        ></a-entity>
-        <a-entity
-          id="deadTree2"
-          position="-40.65659 0 -6.5323"
-          composite-tree="scale: 5.0; type: dead"
-        ></a-entity>
         <a-entity
           id="deadTree3"
           position="-4.40376 0 22.987"
@@ -868,56 +777,16 @@
           composite-tree="scale: 4.6; type: dead"
         ></a-entity>
         <a-entity
-          id="deadTree6"
-          position="12 0 -38"
-          composite-tree="scale: 5.2; type: dead"
-        ></a-entity>
-        <a-entity
           id="deadTree7"
           position="-32 0 25"
           composite-tree="scale: 4.3; type: dead"
         ></a-entity>
-        <a-entity
-          id="deadTree8"
-          position="28 0 -14.79774"
-          composite-tree="scale: 4.7; type: dead"
-        ></a-entity>
-        <a-entity
-          id="deadTree9"
-          position="1.39421 0 -21.87106"
-          composite-tree="scale: 5.1; type: dead"
-        ></a-entity>
-        <a-entity
-          id="deadTree10"
-          position="42 0 -15"
-          composite-tree="scale: 4.4; type: dead"
-        ></a-entity>
 
         <!-- Random Shrubs -->
-        <a-entity
-          id="shrub1"
-          position="-8 0 -12"
-          composite-tree="scale: 1.8; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub2"
-          position="15 0 -8"
-          composite-tree="scale: 2.0; type: shrub"
-        ></a-entity>
         <a-entity
           id="shrub3"
           position="-20 0 18"
           composite-tree="scale: 1.6; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub4"
-          position="25 0 -22"
-          composite-tree="scale: 2.2; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub5"
-          position="-12 0 -28"
-          composite-tree="scale: 1.9; type: shrub"
         ></a-entity>
         <a-entity
           id="shrub6"
@@ -925,29 +794,9 @@
           composite-tree="scale: 2.1; type: shrub"
         ></a-entity>
         <a-entity
-          id="shrub7"
-          position="-30 0 -5"
-          composite-tree="scale: 1.7; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub8"
-          position="8 0 -32"
-          composite-tree="scale: 2.3; type: shrub"
-        ></a-entity>
-        <a-entity
           id="shrub9"
           position="-15 0 22"
           composite-tree="scale: 1.8; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub10"
-          position="32 0 -12"
-          composite-tree="scale: 2.0; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub11"
-          position="-22 0 -38"
-          composite-tree="scale: 1.9; type: shrub"
         ></a-entity>
         <a-entity
           id="shrub12"
@@ -960,34 +809,9 @@
           composite-tree="scale: 1.7; type: shrub"
         ></a-entity>
         <a-entity
-          id="shrub14"
-          position="12 0 -42"
-          composite-tree="scale: 2.1; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub15"
-          position="-18 0 -15"
-          composite-tree="scale: 1.8; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub16"
-          position="35 0 -28"
-          composite-tree="scale: 2.0; type: shrub"
-        ></a-entity>
-        <a-entity
           id="shrub17"
           position="-25 0 32"
           composite-tree="scale: 1.9; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub18"
-          position="22 0 -35"
-          composite-tree="scale: 2.3; type: shrub"
-        ></a-entity>
-        <a-entity
-          id="shrub19"
-          position="-38 0 -22"
-          composite-tree="scale: 1.7; type: shrub"
         ></a-entity>
         <a-entity
           id="shrub20"
